--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "turing-turk",
+  "name": "turing-test",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.463.0",
+    "dotenv": "^8.0.0",
     "express": "^4.17.0",
+    "onoff": "^4.1.1",
     "ws": "^7.0.0"
   }
 }
