--- a/server/package.json
+++ b/server/package.json
@@ -1,18 +1,14 @@
 {
-  "name": "turing-test",
+  "name": "turing-test-server",
   "version": "1.0.0",
   "description": "This is a standard Turing test",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js serve-only"
+    "start": "node index.js"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "cnrd",
   "dependencies": {
-    "aws-sdk": "^2.463.0",
-    "dotenv": "^8.0.0",
     "express": "^4.17.0",
-    "onoff": "^4.1.1",
     "ws": "^7.0.0"
   }
 }
